--- a/src/pages/contact-us/components/ContactUsSegment.module.css
+++ b/src/pages/contact-us/components/ContactUsSegment.module.css
@@ -1,12 +1,13 @@
 .segment-button {
     background: none;
     border: none;
-    font-size: 4.375rem;
+    font-size: 3.5rem;
     font-weight: 600;
     cursor:pointer;
     font-family: "ClashDisplay";
     text-decoration: none;
     color: black;
+    margin: 0;
 }
 
 .segment-button:hover,
@@ -14,3 +15,9 @@
 .active {
     color: #9B4DFF;
 }
+
+@media (min-width: 600px) {
+    .segment-button {
+        font-size: 4.375rem;
+    }
+  }
